--- a/Axis.Pulsar.Importer.Common/Axis.Pulsar.Importer.Common.csproj
+++ b/Axis.Pulsar.Importer.Common/Axis.Pulsar.Importer.Common.csproj
@@ -1,12 +1,31 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net5.0</TargetFramework>
+    <TargetFrameworks>netstandard2.1;net5.0;netcoreapp3.0</TargetFrameworks>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <AssemblyVersion>1.0.0.0</AssemblyVersion>
+    <FileVersion>1.0.0.0</FileVersion>
+    <Version>0.2.0</Version>
+    <Description>Dynamic Parser Grammar Importer Library. Companion library to Axis.Pulsar</Description>
+    <PackageReleaseNotes></PackageReleaseNotes>
+    <RepositoryUrl>https://github.com/d-dantte/Axis.Pulsar</RepositoryUrl>
+    <PackageProjectUrl>https://github.com/d-dantte/Axis.Pulsar</PackageProjectUrl>
+    <PackageLicenseExpression>MIT</PackageLicenseExpression>
+    <Company>Axiis</Company>
+    <Authors>Dantte</Authors>
+    <LangVersion>latest</LangVersion>
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Json\" />
-    <Folder Include="BNF\" />
+    <None Remove="BNF\BNFRule.xml" />
+    <None Remove="Xml\RuleDefinition.xsd" />
+    <None Remove="Xml\SampleRule.xml" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Include="BNF\BNFRule.xml" />
+    <EmbeddedResource Include="Xml\RuleDefinition.xsd" />
+    <EmbeddedResource Include="Xml\SampleRule.xml" />
   </ItemGroup>
 
   <ItemGroup>
