--- a/Axis.Pulsar.Parser/Axis.Pulsar.Parser.csproj
+++ b/Axis.Pulsar.Parser/Axis.Pulsar.Parser.csproj
@@ -16,4 +16,8 @@
     <LangVersion>latest</LangVersion>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="Semantics\" />
+  </ItemGroup>
+
 </Project>
