--- a/Axis.Pulsar.Parser.Tests/Axis.Pulsar.Parser.Tests.csproj
+++ b/Axis.Pulsar.Parser.Tests/Axis.Pulsar.Parser.Tests.csproj
@@ -20,4 +20,8 @@
     <ProjectReference Include="..\Axis.Pulsar.Parser\Axis.Pulsar.Parser.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Recognizers\" />
+  </ItemGroup>
+
 </Project>
