--- a/Axis.Pulsar.Languages.Tests/Axis.Pulsar.Languages.Tests.csproj
+++ b/Axis.Pulsar.Languages.Tests/Axis.Pulsar.Languages.Tests.csproj
@@ -13,12 +13,14 @@
     <None Remove="xBnf\TestGrammar.xbnf" />
     <None Remove="xBnf\TestGrammar2.xbnf" />
     <None Remove="xBnf\TestGrammar3.xbnf" />
+    <None Remove="xBnf\TestIon.xbnf" />
   </ItemGroup>
 
   <ItemGroup>
     <EmbeddedResource Include="xBnf\TestGrammar.xbnf" />
     <EmbeddedResource Include="xBnf\TestGrammar2.xbnf" />
     <EmbeddedResource Include="xBnf\TestGrammar3.xbnf" />
+    <EmbeddedResource Include="xBnf\TestIon.xbnf" />
   </ItemGroup>
 
   <ItemGroup>
