--- a/Axis.Pusar.Grammar.Tests/Axis.Pusar.Grammar.Tests.csproj
+++ b/Axis.Pusar.Grammar.Tests/Axis.Pusar.Grammar.Tests.csproj
@@ -22,6 +22,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Axis.Pulsar.Grammar\Axis.Pulsar.Grammar.csproj" />
+    <ProjectReference Include="..\Axis.Pulsar.Languages\Axis.Pulsar.Languages.csproj" />
   </ItemGroup>
 
   <ItemGroup>
