--- a/Axis.Pulsar.Languages.Tests/Axis.Pulsar.Languages.Tests.csproj
+++ b/Axis.Pulsar.Languages.Tests/Axis.Pulsar.Languages.Tests.csproj
@@ -10,6 +10,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="xBnf\TestDia.xbnf" />
     <None Remove="xBnf\TestGrammar.xbnf" />
     <None Remove="xBnf\TestGrammar2.xbnf" />
     <None Remove="xBnf\TestGrammar3.xbnf" />
@@ -17,6 +18,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <EmbeddedResource Include="xBnf\TestDia.xbnf" />
     <EmbeddedResource Include="xBnf\TestGrammar.xbnf" />
     <EmbeddedResource Include="xBnf\TestGrammar2.xbnf" />
     <EmbeddedResource Include="xBnf\TestGrammar3.xbnf" />
@@ -24,11 +26,11 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.5.0" />
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.6.3" />
     <PackageReference Include="Moq" Version="4.18.4" />
-    <PackageReference Include="MSTest.TestAdapter" Version="3.0.2" />
-    <PackageReference Include="MSTest.TestFramework" Version="3.0.2" />
-    <PackageReference Include="coverlet.collector" Version="3.2.0">
+    <PackageReference Include="MSTest.TestAdapter" Version="3.0.4" />
+    <PackageReference Include="MSTest.TestFramework" Version="3.0.4" />
+    <PackageReference Include="coverlet.collector" Version="6.0.0">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
