--- a/Axis.Pulsar.Core.XBNF/Axis.Pulsar.Core.XBNF.csproj
+++ b/Axis.Pulsar.Core.XBNF/Axis.Pulsar.Core.XBNF.csproj
@@ -6,4 +6,12 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Axis.Pulsar.Core\Axis.Pulsar.Core.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Parsers/" />
+  </ItemGroup>
+
 </Project>
