--- a/Axis.Pulsar.Core.XBNF/Axis.Pulsar.Core.XBNF.csproj
+++ b/Axis.Pulsar.Core.XBNF/Axis.Pulsar.Core.XBNF.csproj
@@ -10,4 +10,8 @@
     <ProjectReference Include="..\Axis.Pulsar.Core\Axis.Pulsar.Core.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Writers\" />
+  </ItemGroup>
+
 </Project>
