adding more unit tests

--- a/Axis.Pulsar.Core.XBNF.Tests/Axis.Pulsar.Core.XBNF.Tests.csproj
+++ b/Axis.Pulsar.Core.XBNF.Tests/Axis.Pulsar.Core.XBNF.Tests.csproj
@@ -24,4 +24,9 @@
     <ProjectReference Include="..\Axis.Pulsar.Core.XBNF\Axis.Pulsar.Core.XBNF.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Writers\" />
+    <Folder Include="RuleFactories\" />
+  </ItemGroup>
+
 </Project>
