--- a/Axis.Pulsar.Core.XBNF.Tests/Axis.Pulsar.Core.XBNF.Tests.csproj
+++ b/Axis.Pulsar.Core.XBNF.Tests/Axis.Pulsar.Core.XBNF.Tests.csproj
@@ -10,6 +10,14 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="SampleGrammar\sample-1.xbnf" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Include="SampleGrammar\sample-1.xbnf" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.8.0" />
     <PackageReference Include="Moq" Version="4.18.4" />
     <PackageReference Include="MSTest.TestAdapter" Version="3.1.1" />
