--- a/Axis.Pulsar.Core/Axis.Pulsar.Core.csproj
+++ b/Axis.Pulsar.Core/Axis.Pulsar.Core.csproj
@@ -1,10 +1,31 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <AssemblyVersion>1.0.0.0</AssemblyVersion>
+    <FileVersion>1.0.0.0</FileVersion>
+    <Version>0.0.1</Version>
+    <LangVersion>latest</LangVersion>
+    <Description>Generic context-sensitive grammar recognizer.</Description>
+    <PackageReleaseNotes></PackageReleaseNotes>
+    <RepositoryUrl>https://github.com/d-dantte/Axis.Pulsar</RepositoryUrl>
+    <PackageProjectUrl>https://github.com/d-dantte/Axis.Pulsar</PackageProjectUrl>
+    <PackageLicenseExpression>MIT</PackageLicenseExpression>
+    <Company>Axiis</Company>
+    <Authors>Dantte</Authors>
+    <PackageReadmeFile>axis.pulsar.core.readme.md</PackageReadmeFile>
   </PropertyGroup>
+
+  <ItemGroup>
+    <None Include="axis.pulsar.core.readme.md">
+      <Pack>True</Pack>
+      <PackagePath>\</PackagePath>
+    </None>
+  </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Axis.Luna.Common" Version="6.0.29" />
