--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -18,22 +18,16 @@ jobs:
     - name: Build
       run: dotnet build --configuration Release /p:Version=${VERSION}
     - name: Test
-      run: dotnet test --configuration Release /p:Version=${VERSION} --no-build
+      run: dotnet test --configuration Release /p:Version=${VERSION} --no-build --filter Axis.Pulsar.Core
 
-    # Axis.Luna.Extensions
+    # Axis.Pulsar.Core
     - name: Pack
-      run: dotnet pack ./Axis.Luna.Extensions/Axis.Luna.Extensions.csproj --configuration Release /p:Version=${VERSION} --output .
+      run: dotnet pack ./Axis.Pulsar.Core/Axis.Pulsar.Core.csproj --configuration Release /p:Version=${VERSION} --output .
     - name: Push
-      run: dotnet nuget push Axis.Luna.Extensions.${VERSION}.nupkg --source https://api.nuget.org/v3/index.json --api-key ${{ secrets.NUGET_API_TOKEN }}
+      run: dotnet nuget push Axis.Pulsar.Core.${VERSION}.nupkg --source https://api.nuget.org/v3/index.json --api-key ${{ secrets.NUGET_API_TOKEN }}
 
-    # Axis.Luna.Common
+    # Axis.Pulsar.Core.XBNF
     - name: Pack
-      run: dotnet pack ./Axis.Luna.Common/Axis.Luna.Common.csproj --configuration Release /p:Version=${VERSION} --output .
+      run: dotnet pack ./Axis.Pulsar.Core.XBNF/Axis.Pulsar.Core.XBNF.csproj --configuration Release /p:Version=${VERSION} --output .
     - name: Push
-      run: dotnet nuget push Axis.Luna.Common.${VERSION}.nupkg --source https://api.nuget.org/v3/index.json --api-key ${{ secrets.NUGET_API_TOKEN }}
-
-    # Axis.Luna.FInvoke
-    - name: Pack
-      run: dotnet pack ./Axis.Luna.FInvoke/Axis.Luna.FInvoke.csproj --configuration Release /p:Version=${VERSION} --output .
-    - name: Push
-      run: dotnet nuget push Axis.Luna.FInvoke.${VERSION}.nupkg --source https://api.nuget.org/v3/index.json --api-key ${{ secrets.NUGET_API_TOKEN }}
+      run: dotnet nuget push Axis.Pulsar.Core.XBNF.${VERSION}.nupkg --source https://api.nuget.org/v3/index.json --api-key ${{ secrets.NUGET_API_TOKEN }}
