--- a/Axis.Pulsar.Core.XBNF.Tests/Axis.Pulsar.Core.XBNF.Tests.csproj
+++ b/Axis.Pulsar.Core.XBNF.Tests/Axis.Pulsar.Core.XBNF.Tests.csproj
@@ -12,11 +12,13 @@
   <ItemGroup>
     <None Remove="SampleGrammar\Int1.xbnf" />
     <None Remove="SampleGrammar\json.xbnf" />
+    <None Remove="SampleGrammar\SampleLang.xbnf" />
   </ItemGroup>
 
   <ItemGroup>
     <EmbeddedResource Include="SampleGrammar\Int1.xbnf" />
     <EmbeddedResource Include="SampleGrammar\json.xbnf" />
+    <EmbeddedResource Include="SampleGrammar\SampleLang.xbnf" />
   </ItemGroup>
 
   <ItemGroup>
