--- a/Axis.Pulsar.Core.XBNF/Axis.Pulsar.Core.XBNF.csproj
+++ b/Axis.Pulsar.Core.XBNF/Axis.Pulsar.Core.XBNF.csproj
@@ -1,7 +1,7 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net7.0</TargetFramework>
+    <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
 
@@ -28,7 +28,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Axis.Luna.Common" Version="7.0.6" />
+    <PackageReference Include="Axis.Luna.Common" Version="7.0.10" />
   </ItemGroup>
 
   <ItemGroup>
