--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -15,19 +15,32 @@ jobs:
         git branch --remote --contains | grep origin/main
     - name: Set VERSION variable from tag
       run: echo "VERSION=${GITHUB_REF/refs\/tags\/v/}" >> $GITHUB_ENV
+    - name: Setup .NET
+      uses: actions/setup-dotnet@v4
+      with:
+        dotnet-version: '8.x'
     - name: Build
       run: dotnet build --configuration Release /p:Version=${VERSION}
     - name: Test
-      run: dotnet test --configuration Release /p:Version=${VERSION} --no-build --filter Axis.Pulsar.Core
+      run: dotnet test --configuration Release /p:Version=${VERSION} --no-build  
 
-    # Axis.Pulsar.Core
-    - name: Pack
-      run: dotnet pack ./Axis.Pulsar.Core/Axis.Pulsar.Core.csproj --configuration Release /p:Version=${VERSION} --output .
-    - name: Push
-      run: dotnet nuget push Axis.Pulsar.Core.${VERSION}.nupkg --source https://api.nuget.org/v3/index.json --api-key ${{ secrets.NUGET_API_TOKEN }}
+    - name: Find and pack eligible projects
+      run: |
+        mkdir -p ./build/nupkgs
+        for csproj in $(find . -name "*.csproj"); do
+          if grep -q "<PackAndPush>true</PackAndPush>" "$csproj"; then
+            echo "Packing $csproj"
+            dotnet pack "$csproj" -c Release /p:Version=${VERSION} -o ./build/nupkgs
+          else
+            echo "Skipping $csproj (PublishToNuget not true)"
+          fi
+        done
 
-    # Axis.Pulsar.Core.XBNF
-    - name: Pack
-      run: dotnet pack ./Axis.Pulsar.Core.XBNF/Axis.Pulsar.Core.XBNF.csproj --configuration Release /p:Version=${VERSION} --output .
-    - name: Push
-      run: dotnet nuget push Axis.Pulsar.Core.XBNF.${VERSION}.nupkg --source https://api.nuget.org/v3/index.json --api-key ${{ secrets.NUGET_API_TOKEN }}
+    - name: Push packages to GitHub Packages
+      run: |
+        for nupkg in ./build/nupkgs/*.nupkg; do
+          dotnet nuget push "$nupkg" \
+            --api-key "${{ secrets.NUGET_API_TOKEN }}" \
+            --source https://api.nuget.org/v3/index.json \
+            --skip-duplicate
+        done
