--- a/Axis.Pulsar.Core.XBNF/Axis.Pulsar.Core.XBNF.csproj
+++ b/Axis.Pulsar.Core.XBNF/Axis.Pulsar.Core.XBNF.csproj
@@ -18,6 +18,7 @@
     <Company>Axiis</Company>
     <Authors>Dantte</Authors>
     <PackageReadmeFile>axis.pulsar.core.xbnf.readme.md</PackageReadmeFile>
+	  <PackAndPush>true</PackAndPush>
   </PropertyGroup>
 
   <ItemGroup>
@@ -28,7 +29,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Axis.Luna.Common" Version="7.0.10" />
+    <PackageReference Include="Axis.Luna.Common" Version="7.0.15" />
   </ItemGroup>
 
   <ItemGroup>
